alterando dados do navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- INICIO DO NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Deposito da Vila</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,21 +21,24 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Contatos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Produtos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Ferramentas</a>
+                <a class="dropdown-item" href="#">Argamassas</a>
+                <a class="dropdown-item" href="#">Parafusos</a>
+                <a class="dropdown-item" href="#">Hidraulica</a>
+                <a class="dropdown-item" href="#">Eletrica</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link disabled" href="#">Endereço</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -44,7 +47,7 @@
           </form>
         </div>
       </nav>
-
+<!-- Termino do NAVBAR -->
 
 
 <!-- JS, Popper.js, and jQuery -->
